--- a/app/views/simplefin_items/setup_accounts.html.erb
+++ b/app/views/simplefin_items/setup_accounts.html.erb
@@ -15,6 +15,7 @@
                   data: {
                     controller: "loading-button",
                     action: "submit->loading-button#showLoading",
+                    loading_button_loading_text_value: "Creating Accounts...",
                     turbo_frame: "_top"
                   },
                   class: "space-y-6" do |form| %>
