API key settings tests

--- a/app/views/settings/api_keys/show.html.erb
+++ b/app/views/settings/api_keys/show.html.erb
@@ -148,7 +148,7 @@
   </div>
 <% else %>
   <header class="flex items-center justify-between">
-    <h1 class="text-primary text-xl font-medium">Create Your API Key</h1>
+    <h1 class="text-primary text-xl font-medium">API Key</h1>
     <%= render DS::Link.new(
       text: "Create API Key",
       href: new_settings_api_key_path,
