--- a/app/views/settings/guides/show.html.erb
+++ b/app/views/settings/guides/show.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :page_title, "Onboarding Guide" %>
+<%= content_for :page_title, "Guides" %>
 
 <div class="bg-container rounded-xl shadow-border-xs p-4 prose prose-sm max-w-none">
   <%= @guide_content.html_safe %>
