--- a/app/views/settings/hostings/_yahoo_finance_settings.html.erb
+++ b/app/views/settings/hostings/_yahoo_finance_settings.html.erb
@@ -3,7 +3,7 @@
     <h2 class="font-medium mb-1"><%= t(".title") %></h2>
     <p class="text-secondary text-sm mb-4"><%= t(".description") %></p>
   </div>
-  <% if @yahoo_finance_usage.present? && @yahoo_finance_usage.success? %>
+  <% if @yahoo_finance_provider&.healthy? %>
     <div class="space-y-4">
       <div class="flex items-center space-x-3">
         <div class="w-3 h-3 bg-green-500 rounded-full"></div>
