--- a/app/views/settings/hostings/_openai_settings.html.erb
+++ b/app/views/settings/hostings/_openai_settings.html.erb
@@ -2,7 +2,7 @@
   <div>
     <h2 class="font-medium mb-1"><%= t(".title") %></h2>
     <% if ENV["OPENAI_ACCESS_TOKEN"].present? %>
-      <p class="text-sm text-secondary">You have successfully configured your OpenAI access token through the OPENAI_ACCESS_TOKEN environment variable.</p>
+      <p class="text-sm text-secondary"><%= t(".env_configured_message") %></p>
     <% else %>
       <p class="text-secondary text-sm mb-4"><%= t(".description") %></p>
     <% end %>
@@ -15,12 +15,15 @@
                          controller: "auto-submit-form",
                          "auto-submit-form-trigger-event-value": "blur"
                        } do |form| %>
-    <%= form.text_field :openai_access_token,
-                        label: t(".label"),
-                        type: "password",
-                        placeholder: t(".placeholder"),
-                        value: ENV.fetch("OPENAI_ACCESS_TOKEN", Setting.openai_access_token),
-                        disabled: ENV["OPENAI_ACCESS_TOKEN"].present?,
-                        data: { "auto-submit-form-target": "auto" } %>
+  <%= form.password_field :openai_access_token,
+                          label: t(".label"),
+                          placeholder: t(".placeholder"),
+                          value: (Setting.openai_access_token.present? ? "********" : nil),
+                          autocomplete: "off",
+                          autocapitalize: "none",
+                          spellcheck: "false",
+                          inputmode: "text",
+                          disabled: ENV["OPENAI_ACCESS_TOKEN"].present?,
+                          data: { "auto-submit-form-target": "auto" } %>
   <% end %>
 </div>
