--- a/app/views/pages/dashboard/_outflows_donut.html.erb
+++ b/app/views/pages/dashboard/_outflows_donut.html.erb
@@ -19,15 +19,19 @@
       <!-- Donut Chart -->
       <div class="w-full lg:w-1/3 max-w-[300px]">
         <div class="h-[300px] relative"
-          data-controller="outflows-donut-chart"
-          data-outflows-donut-chart-categories-value="<%= outflows_data[:categories].to_json %>"
-          data-outflows-donut-chart-currency-symbol-value="<%= outflows_data[:currency_symbol] %>"
-          data-outflows-donut-chart-start-date-value="<%= period.date_range.first %>"
-          data-outflows-donut-chart-end-date-value="<%= period.date_range.last %>">
-          <div data-outflows-donut-chart-target="chartContainer" class="absolute inset-0 pointer-events-none"></div>
+          data-controller="donut-chart"
+          data-donut-chart-segments-value="<%= outflows_data[:categories].to_json %>"
+          data-donut-chart-segment-height-value="5"
+          data-donut-chart-segment-opacity-value="0.9"
+          data-donut-chart-extended-hover-value="true"
+          data-donut-chart-hover-extension-value="3"
+          data-donut-chart-enable-click-value="true"
+          data-donut-chart-start-date-value="<%= period.date_range.first %>"
+          data-donut-chart-end-date-value="<%= period.date_range.last %>">
+          <div data-donut-chart-target="chartContainer" class="absolute inset-0 pointer-events-none"></div>
 
-          <div data-outflows-donut-chart-target="contentContainer" class="flex justify-center items-center h-full">
-            <div data-outflows-donut-chart-target="defaultContent" class="flex flex-col items-center">
+          <div data-donut-chart-target="contentContainer" class="flex justify-center items-center h-full">
+            <div data-donut-chart-target="defaultContent" class="flex flex-col items-center">
               <div class="text-secondary text-sm mb-2">
                 <span>Total Outflows</span>
               </div>
@@ -63,7 +67,7 @@
                 data: {
                   turbo_frame: "_top",
                   category_id: category[:id],
-                  action: "mouseenter->outflows-donut-chart#highlightSegment mouseleave->outflows-donut-chart#unhighlightSegment"
+                  action: "mouseenter->donut-chart#highlightSegment mouseleave->donut-chart#unhighlightSegment"
                 } do %>
               <div class="flex items-center gap-3 flex-1 min-w-0">
                 <div class="w-3 h-3 rounded-full flex-shrink-0" style="background-color: <%= category[:color] %>"></div>
